tests/ui/compile-fail/init/invalid_init.stderr
error[E0277]: the trait bound `impl pin_init::PinInit<Bar>: Init<Bar>` is not satisfied
  --> tests/ui/compile-fail/init/invalid_init.rs:18:13
   |
18 |       let _ = init!(Foo {
   |  _____________^
19 | |         bar <- Bar::new(),
20 | |     });
   | |______^ the trait `Init<Bar>` is not implemented for `impl pin_init::PinInit<Bar>`
   |
   = help: the trait `Init<T, E>` is implemented for `ChainInit<I, F, T, E>`
   = note: this error originates in the macro `init` (in Nightly builds, run with -Z macro-backtrace for more info)
